--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
   <head>
     <title>Latex Translator</title>
+    <style>
+      body {
+				background-color:rgb(0,0,0);
+			}
+      @font-face {
+			  font-family: "Gotham SSm";
+				src: url("GothamSSm.ttf");
+      }
+			* {
+				font-family: "Gotham SSm";
+				color: white;
+			}
+    </style>
   </head>
   <body>
     <h1>test</h1>
