--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       body {
         background-color:rgb(0,0,0);
       }
+      a {
+        color: rgb(255,255,255)
+      }
       @font-face {
         font-family: "Gotham SSm";
         src: url("GothamSSm.ttf");
@@ -17,6 +20,10 @@
     </style>
   </head>
   <body>
-    <h1>test</h1>
+    <h1>TSC Latex Language Translator</h1>
+    <h2>Made by SharkOwO</h2>
+    
+    <textarea id="ToLatex" style="width: 450px; background-color:rgba(10,10,10,1)" placeholder="English/Spanish to Latex"></textarea>
+    <button onclick="ToLatex()" style="background-color:rgb(10,10,10)">Translate</button>
   </body>
 </html>
