--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Latex Translator</title>
+    <title>Latex Language Translator</title>
+    <link rel="icon" type="image/x-icon"  href="image.ico"></link>
     <style>
       body {
         background-color:rgb(0,0,0);
@@ -21,37 +22,66 @@
   </head>
   <body>
     <h1>TSC Latex Language Translator</h1>
-    <h2>Made by SharkOwO</h2>
+    <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
+    <h3>Supports English and Spanish!<h2>
     
-    <textarea id="ToLatex" style="width: 500px; background-color:rgba(33,33,33,1)" placeholder="English/Spanish to Latex"></textarea><br>
-    <button onclick="ToLatex()" style="background-color:rgb(33,33,33)">Translate</button><br>
-    <textarea id="FromLatex" style="width: 500px; background-color:rgba(33,33,33,1)" placeholder="Latex to English/Spanish"></textarea><br>
-    <button onclick="FromLatex()" style="background-color:rgb(33,33,33)">Translate</button>
+    <textarea id="ToLatex" cols="150" rows="10" style="resize:none; background-color:rgba(33,33,33,1); border-radius: 10px; margin: 5px 0px;" placeholder="English/Spanish to Latex"></textarea><br>
+    <button onclick="ToLatex()" style="background-color:rgb(33,33,33); border: none; padding: 20px; text-align: center; font-size: 15px; border-radius: 10px; margin: 5px 0px;">Translate to Latex</button><br><br>
+    <textarea id="FromLatex" cols="150" rows="10" style="resize:none; background-color:rgba(33,33,33,1); border-radius: 10px; margin: 5px 0px;" placeholder="Latex to English/Spanish"></textarea><br>
+    <button onclick="FromLatex()" style="background-color:rgb(33,33,33); border: none; padding: 20px; text-align: center; font-size: 15px; border-radius: 10px; margin: 5px 0px;">Translate to English/Spanish</button>
+
+    <h2>Credits:</h2>
+    <h3>- <a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set.</h3>
+    <h3>- <a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer#5275</a> for the original idea.</h3>
+    <h3>- <a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331#4056</a> for some parts of the code.</h3>
     <script>
       let ToLatexInput = document.getElementById("ToLatex");
       let FromLatexInput = document.getElementById("FromLatex");
       let LatexList = {
+        0: "◀",
+        1: "●",
+        2: "▬",
+        3: "▲",
+        4: "■",
+        5: "▱",
+        6: "◈",
+        7: "▩",
+        8: "▣",
+        9: "▶",
         a: "σ",
+        à: "σ",
+        á: "σ",
         b: "£",
         c: "Ǝ",
+        ç: "E",
         d: "₳",
         e: "ε",
+        é: "ε",
+        è: "ε",
         f: "┘",
         g: "Γ",
         h: "μ",
         i: "∩",
+        í: "∩",
+        ì: "∩",
         j: "ſ",
         k: "≡",
         l: "Œ",
         m: "ß",
         n: "þ",
+        ñ: "•",
         o: "⌐",
+        ó: "⌐",
+        ò: "⌐",
         p: "Æ",
         q: "¶",
         r: "Ω",
         s: "Φ",
         t: "┼",
         u: "↨",
+        ú: "↨",
+        ù: "↨",
+        ü: "↕",
         v: "‡",
         w: "w",
         x: "⋛",
@@ -59,9 +89,20 @@
         z: "√"
       }
       let EnglishSpanishList = {
+        "◀": "0",
+        "●": "1",
+        "▬": "2",
+        "▲": "3",
+        "■": "4",
+        "▱": "5",
+        "◈": "6",
+        "▩": "7",
+        "▣": "8",
+        "▶": "9",
         "σ": "a",
         "£": "b",
         "Ǝ": "c",
+	"E": "ç",
         "₳": "d",
         "ε": "e",
         "┘": "f",
@@ -73,6 +114,7 @@
         "Œ": "l",
         "ß": "m",
         "þ": "n",
+        "•": "ñ",
         "⌐": "o",
         "Æ": "p",
         "¶": "q",
@@ -80,6 +122,7 @@
         "Φ": "s",
         "┼": "t",
         "↨": "u",
+        "↕": "ü",
         "‡": "v",
         "w": "w",
         "⋛": "x",
