--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Latex Language Translator</title>
+    <title>Latex Translator</title>
     <link rel="icon" type="image/x-icon"  href="image.ico"></link>
     <style>
       body {
@@ -23,9 +23,9 @@
   <body>
     <h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
-    <h3>Supports English and Spanish!</h3>
-    <h3>Note: For spanish letters like "ñ", "ç" or "ü" uses different characters than the original ones.</h3>
-	  
+    <h3>Supports English and Spanish!<h3>
+    <h3>Note: For spanish letters like "ñ", "ç" or "ü" uses different characters than the original ones.</h3>    
+	    
     <textarea id="ToLatex" cols="150" rows="10" style="resize:none; background-color:rgba(33,33,33,1); border-radius: 10px; margin: 5px 0px;" placeholder="English/Spanish to Latex"></textarea><br>
     <button onclick="ToLatex()" style="background-color:rgb(33,33,33); border: none; padding: 20px; text-align: center; font-size: 15px; border-radius: 10px; margin: 5px 0px;">Translate to Latex</button><br><br>
     <textarea id="FromLatex" cols="150" rows="10" style="resize:none; background-color:rgba(33,33,33,1); border-radius: 10px; margin: 5px 0px;" placeholder="Latex to English/Spanish"></textarea><br>
@@ -101,38 +101,26 @@
         "▣": "8",
         "▶": "9",
         "σ": "a",
-	"Σ": "a",
         "£": "b",
         "Ǝ": "c",
-	"ǝ": "c",
 	"E": "ç",
-	"e": "ç",
         "₳": "d",
         "ε": "e",
-	"Ε": "e",
         "┘": "f",
         "Γ": "g",
-	"γ": "g",
         "μ": "h",
-	"Μ": "h",
         "∩": "i",
         "ſ": "j",
-	"S": "j",
         "≡": "k",
         "Œ": "l",
-	"œ": "l",
         "ß": "m",
         "þ": "n",
-	"Þ": "n",
         "•": "ñ",
         "⌐": "o",
         "Æ": "p",
-	"æ": "p",
         "¶": "q",
         "Ω": "r",
-	"ω": "r",
         "Φ": "s",
-	"φ": "s",
         "┼": "t",
         "↨": "u",
         "↕": "ü",
