--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Latex Translator</title>
+    <title>Latex Language Translator</title>
     <link rel="icon" type="image/x-icon"  href="image.ico"></link>
     <style>
       body {
