--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <body>
+  <body><center>
     <h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
     <h3>Supports English and Spanish!<h3>
@@ -152,5 +152,5 @@
         };
       };
     </script>
-  </body>
+  </center></body>
 </html>
