--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
     <h3>Supports English and Spanish!<h3>
-    <h3>Note: For spanish letters like "ñ", "ç" or "ü" uses different characters than the original ones.</h3>    
+    <h3>Note: For spanish letters like "ñ", "ç" and "ü" uses different characters than the original ones.</h3>    
 	    
     <textarea id="ToLatex" cols="150" rows="10" style="resize:none; background-color:rgba(33,33,33,1); border-radius: 10px; margin: 5px 0px;" placeholder="English/Spanish to Latex"></textarea><br>
     <button onclick="ToLatex()" style="background-color:rgb(33,33,33); border: none; padding: 20px; text-align: center; font-size: 15px; border-radius: 10px; margin: 5px 0px;">Translate to Latex</button><br><br>
