--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </style>
   </head>
   <body><center>
+    <img src="pic_trulli.jpg">
     <h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
     <h3>Supports English and Spanish!<h3>
