--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Latex Language Translator</title>
-    <link rel="icon" type="image/x-icon"  href="image.ico"></link>
+    <link rel="icon" type="image/x-icon"  href="tsc_icon.png"></link>
     <style>
       body {
         background-color:rgb(0,0,0);
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body><center>
-    <img src="pic_trulli.jpg">
+    <img src="tsc_icon.png">
     <h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
     <h3>Supports English and Spanish!<h3>
