--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Latex Language Translator</title>
-    <link rel="icon" type="image/x-icon"  href="tsc_icon.png"></link>
+    <link rel="icon" type="image/x-icon"  href="tsc_icon.ico"></link>
     <style>
       body {
         background-color:rgb(0,0,0);
@@ -21,8 +21,7 @@
     </style>
   </head>
   <body><center>
-    <img src="tsc_icon.png">
-    <h1>TSC Latex Language Translator</h1>
+    <img src="tsc_icon.png" alt="TSC Icon" /><h1>TSC Latex Language Translator</h1>
     <h2>Made by <a href="https://github.com/SharkOwO">SharkOwO</a></h2>
     <h3>Supports English and Spanish!<h3>
     <h3>Note: For spanish letters like "ñ", "ç" and "ü" uses different characters than the original ones.</h3>    
