--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Latex Language Translator v1.0.0</title>
+    <title>Latex Language Translator v1.1.0</title>
     <link rel="icon" type="image/x-icon"  href="tsc_icon.ico"></link>
     <style>
       body {
@@ -39,7 +39,7 @@
     <div class="background">
       <div class="container">
         <img src="tsc_icon.png" width="75" height="75" />
-        <h1>TSC Latex Language Translator v1.0.0</h1><h3 style="text-indent:30px">By <a href="https://github.com/LatexGod">LatexGod</a></h3>
+        <h1>TSC Latex Language Translator v1.1.0</h1><h3 style="text-indent:30px">By <a href="https://github.com/LatexGod">LatexGod</a></h3>
         <img src="tsc_icon.png" width="75" height="75" />
       </div>
       <div class="container">
@@ -50,12 +50,16 @@
         <button onclick="ToLatex()" style="background-color:rgb(0,0,0,0.25); border: 1px solid white; width: 1000px; height: 75px; text-align: center; font-size: 15px; border-radius: 15px; margin: 5px 0px;">Translate to Latex</button>
         <button onclick="FromLatex()" style="background-color:rgb(0,0,0,0.25); border: 1px solid white; width: 1000px; height: 75px; text-align: center; font-size: 15px; border-radius: 15px; margin: 5px 0px;">Translate to English/Spanish</button>
       </div>
-      <h2>Credits:</h2>
-      <ul>
-        <li><h3><a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the images.</h3></li>
-        <li><h3><a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100</a> for the original idea.</h3></li>
-        <li><h3><a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331</a> for some parts of the code.</h3></li>
-      </ul>
+    </div>
+    <div class="background">
+      <h1>Changelog (v1.1.0)</h1>
+      <h3>- The translator is now mobile-friendly!</h3>
+      <h3>- Added a changelog</h3>
+      <h3>- Fixed the title</h3>
+      <h1>Credits:</h1>
+      <h3>- <a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the images.</h3>
+      <h3>- <a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100</a> for the original idea.</h3>
+      <h3>- <a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331</a> for some parts of the code.</h3>
     </div>
     <script>
       let ToLatexInput = document.getElementById("ToLatex");
