--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Latex Language Translator v1.1.0</title>
+    <title>Latex Language Translator v1.1.1</title>
     <link rel="icon" type="image/x-icon"  href="tsc_icon.ico"></link>
     <style>
       body {
@@ -39,7 +39,7 @@
     <div class="background">
       <div class="container">
         <img src="tsc_icon.png" width="75" height="75" />
-        <h1>TSC Latex Language Translator v1.1.0</h1><h3 style="text-indent:30px">By <a href="https://github.com/LatexGod">LatexGod</a></h3>
+        <h1>TSC Latex Language Translator v1.1.1</h1><pre>     </pre><h3>By <a href="https://github.com/LatexGod">LatexGod</a></h3>
         <img src="tsc_icon.png" width="75" height="75" />
       </div>
       <div class="container">
@@ -52,10 +52,8 @@
       </div>
     </div>
     <div class="background">
-      <h1>Changelog (v1.1.0)</h1>
-      <h3>- The translator is now mobile-friendly!</h3>
-      <h3>- Added a changelog</h3>
-      <h3>- Fixed the title</h3>
+      <h1>Changelog (v1.1.1)</h1>
+      <h3>- Fixed the title again</h3>
       <h1>Credits:</h1>
       <h3>- <a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the images.</h3>
       <h3>- <a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100</a> for the original idea.</h3>
