--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="TSC.png" width="75" height="75"/>
       </div>
       <div class="container">
-        <img src="LatexGod.jpg" width="50" height="50"/>
-        <h2>Made by <a href="https://github.com/LatexGod">LatexGod</a></h2>
-        <img src="LatexGod.jpg" width="50" height="50"/>
+        <img src="ShorkGod.png" width="50" height="50"/>
+        <h2>Made by <a href="https://github.com/shorkgod">ShorkGod</a></h2>
+        <img src="ShorkGod.png" width="50" height="50"/>
       </div>
       <div class="container">
         <textarea id="Native" cols="150" rows="10" placeholder="Native"></textarea>
