--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
 <head>
-  <title>Latex Translator v2.0</title>
+  <meta charset="UTF-8">
+  <title>Latex Translator v3.0</title>
   <link rel="icon" type="image/x-icon" href="TSC.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <center>
+  <div class="center">
     <div class="background">
       <div class="container">
-        <img src="TSC.png" width="75" height="75"/>
-        <h1>TSC Latex Language Translator v2.0</h1>
-        <img src="TSC.png" width="75" height="75"/>
+        <img src="TSC.png" width="75" height="75" alt="TSC">
+        <h1>TSC Latex Language Translator v3.0</h1>
+        <img src="TSC.png" width="75" height="75" alt="TSC">
       </div>
       <div class="container">
-        <img src="ShorkGod.png" width="50" height="50"/>
+        <img src="ShorkGod.png" width="50" height="50" alt="ShorkGod">
         <h2>Made by <a href="https://github.com/shorkgod">ShorkGod</a></h2>
-        <img src="ShorkGod.png" width="50" height="50"/>
+        <img src="ShorkGod.png" width="50" height="50" alt="ShorkGod">
       </div>
       <div class="container">
-        <textarea id="Native" cols="150" rows="10" placeholder="Native"></textarea>
-        <textarea id="Latex" cols="150" rows="10" placeholder="Latex"></textarea>
+        <textarea id="NativeTextarea" cols="150" rows="10" placeholder="Native"></textarea>
+        <textarea id="LatexTextarea" cols="150" rows="10" placeholder="Latex"></textarea>
       </div>
     </div>
     <div class="background">
-      <h1>Changelog (v2.0)</h1>
-      <h3>- Reworked the translator</h3>
-      <h3>- Optimized all the code</h3>
+      <h1>Changelog (v3.0)</h1>
+      <h3>- Fixed and optimized almost everything</h3>
       <h1>Credits:</h1>
       <h3>- <a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the logo.</h3>
       <h3>- <a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100</a> for the original idea.</h3>
       <h3>- <a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331</a> for some parts of the code.</h3>
     </div>
-    <script src="script.js"></script>
-  </center>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
