--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Latex Translator v3.0</title>
+  <title>TSC Latex Translator</title>
   <link rel="icon" type="image/x-icon" href="TSC.ico">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +11,7 @@
     <div class="background">
       <div class="container">
         <img src="TSC.png" width="75" height="75" alt="TSC">
-        <h1>TSC Latex Language Translator v3.0</h1>
+        <h1>TSC Latex Language Translator</h1>
         <img src="TSC.png" width="75" height="75" alt="TSC">
       </div>
       <div class="container">
@@ -25,12 +25,11 @@
       </div>
     </div>
     <div class="background">
-      <h1>Changelog (v3.0)</h1>
-      <h3>- Fixed and optimized almost everything</h3>
       <h1>Credits:</h1>
-      <h3>- <a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the logo.</h3>
-      <h3>- <a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100</a> for the original idea.</h3>
-      <h3>- <a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331</a> for some parts of the code.</h3>
+      <h3><a href="https://www.roblox.com/groups/11577231/Thunder-Scientific-Corporation#!/about">Thunder Scientific Corporation</a> for the Latex Language letter set and the logo.</h3>
+      <h1>Other Latex Translators:</h1>
+      <h3><a href="https://nikothegamer100.github.io/latex-language-translator/">nikothegamer100's</a> translator.</h3>
+      <h3><a href="https://vvv331.github.io/TSCLatexTranslator/">vvv331's</a> translator.</h3>
     </div>
   </div>
   <script src="script.js"></script>
