--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section class="container">
           <textarea id="NativeTextarea" cols="150" rows="10" placeholder="Native"></textarea>
           <textarea id="LatexTextarea" cols="150" rows="10" placeholder="Latex"></textarea>
+          <button id="copyButton">Copy Latex to Clipboard</button>
         </section>
       </main>
     </div>
